[gd_scene load_steps=4 format=3 uid="uid://dki0vxulxs1nm"]

[ext_resource type="Texture2D" uid="uid://cqtuo3w2smev1" path="res://Assets/Backgrounds/Grassland Background.png" id="1_cif4i"]
[ext_resource type="Script" path="res://levels.gd" id="1_my3wo"]
[ext_resource type="Texture2D" uid="uid://rtpqlttm47yq" path="res://Assets/Text/Levels.png" id="2_w60ab"]

[node name="Levels" type="Node2D"]
script = ExtResource("1_my3wo")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 325)

[node name="GrasslandBackground" type="Sprite2D" parent="."]
position = Vector2(576.5, 329)
scale = Vector2(1.14746, 1.31641)
texture = ExtResource("1_cif4i")

[node name="Levels" type="Sprite2D" parent="."]
position = Vector2(576, 168)
texture = ExtResource("2_w60ab")

[node name="Level 1" type="Button" parent="."]
offset_left = 511.0
offset_top = 264.0
offset_right = 639.0
offset_bottom = 315.0
theme_override_font_sizes/font_size = 25
text = "Level 1"

[node name="Level 2" type="Button" parent="."]
offset_left = 511.0
offset_top = 348.0
offset_right = 639.0
offset_bottom = 399.0
theme_override_font_sizes/font_size = 25
text = "Level 2"

[node name="Level 3" type="Button" parent="."]
offset_left = 511.0
offset_top = 429.0
offset_right = 639.0
offset_bottom = 480.0
theme_override_font_sizes/font_size = 25
text = "Level 3"

[node name="Exit" type="Button" parent="."]
offset_left = 538.0
offset_top = 510.0
offset_right = 612.0
offset_bottom = 559.0
theme_override_font_sizes/font_size = 25
text = "Exit"

[connection signal="pressed" from="Level 1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Level 2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Level 3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
